@@ -4,9 +4,9 @@ import java.awt.event.ActionEvent;
 
 import javax.swing.AbstractAction;
 
-
 import org.osm2world.core.math.AxisAlignedBoundingBoxXZ;
 import org.osm2world.core.target.common.rendering.OrthoTilesUtil;
+import org.osm2world.core.target.common.rendering.OrthoTilesUtil.CardinalDirection;
 import org.osm2world.viewer.model.Data;
 import org.osm2world.viewer.model.RenderOptions;
 import org.osm2world.viewer.view.ViewerFrame;
@@ -21,7 +21,8 @@ public class OrthoBoundsAction extends AbstractAction {
 	public OrthoBoundsAction(ViewerFrame viewerFrame, Data data, RenderOptions renderOptions) {
 
 		super("Ortho bounds");
-		putValue(SHORT_DESCRIPTION, "Switch to orthographic view of the entire map data.");
+		putValue(SHORT_DESCRIPTION, "Switch to orthographic view of "
+				+ "the entire map data from south.");
 
 		this.viewerFrame = viewerFrame;
 		this.data = data;
@@ -35,9 +36,11 @@ public class OrthoBoundsAction extends AbstractAction {
 		AxisAlignedBoundingBoxXZ bounds =
 			data.getConversionResults().getMapData().getBoundary();
 		
-		renderOptions.camera = OrthoTilesUtil.cameraForBounds(bounds, 30);
+		renderOptions.camera =
+			OrthoTilesUtil.cameraForBounds(bounds, 30, CardinalDirection.S);
 
-		renderOptions.projection = OrthoTilesUtil.projectionForBounds(bounds, 30);
+		renderOptions.projection =
+			OrthoTilesUtil.projectionForBounds(bounds, 30, CardinalDirection.S);
 		
 	}
 	
