@@ -7,6 +7,7 @@
  * new config option createTerrain to disable terrain calculation
  * use ele tags on invisible ways and areas
  * artificial nodes in ways for better terrain elevation
+ * ability to render orthographic view from north, west, or east
  * more street furniture: advertising columns, billboards, benches
  * render handrails on steps
  * update of Osmosis lib version and support for .osm.pbf files
